--- a/index.html
+++ b/index.html
@@ -2,11 +2,120 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Нёрдс</title>
+    <title>Дизайн-студия Нёрдс</title>
   </head>
   <body>
+  	<header class="main-header">
+  		<a class="main-header-logo">
+  			<img src="img/logo.jpeg" alt="Логотип дизайн-студии Nёrds">
+  		</a>
+  		<nav class="main-navigation">
+  		  <ul class="site-navigation">
+  			  <li><a href="studio.html">Студия</a></li>
+  			  <li><a href="clients.html">Клиенты</a></li>
+  			  <li><a href="shop.html">Магазин</a></li>
+  			  <li><a href="contacts.html">Контакты</a></li>
+  		  </ul>
+  		  <a href="basket.html">Корзина</a>
+  		</nav>
+  	</header>
+    <main class="container">
 
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Профессиональный HTML и CSS, уровень 1</a>».</p>
+  		<h1 class="visually-hidden">Дизайн-студия Nerds</h1>
+
+  		<div class="desk">
+  			<b class="slogan">Долго, дорого, скрупулезно.</b>
+  			<p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
+  			<a class="btn" href="#">Узнать больше</a>
+  		</div>
+
+  		<section class="products">
+  			<h2 class="visually-hidden">Наши продукты</h2>
+  			<ul class="products-items">
+  				<li>
+  			  		<h3>Веб-сайты</h3>
+  			  		<p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+  			  		<a class="btn" href="#">Заказать</a>
+  				</li>
+				<li>
+  					<h3>Приложения</h3>
+  					<p>Покорите топ-10 приложений в AppleStore и Google Play</p>
+  					<a class="btn" href="#">Заказать</a>
+  				</li>
+				<li>
+  					<h3>Презентации</h3>
+  					<p>Вы даже не подозреваете насколько вы изумительны!</p>
+  					<a class="btn" href="#">Заказать</a>
+  				</li>
+  			</ul>
+  		</section>
+
+  		<section class="">
+  			<h2 class="visually-hidden">О нас</h2>
+  			  <div class="info">
+  				<b>Мы - маленькая, но гордая дизайн-студия из Краснодара.</b>
+  				<p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
+  				<p>Выполняем заказы на разработку:</p>
+  				<ul class="text">
+  					<li>Веб-сайтов любой сложности</li>
+  					<li>Мобильных приложений для IOS и Android</li>
+  					<li>Слайдшоу и видео для корпоративных презентаций</li>
+  				</ul>
+  		      </div>
+  		      <div class="features">
+  				<img src="img/logo2.jpeg" alt="Логотип Nёrds">
+  				<p class="features-title">С 2004 года любим точность во всем:</p>
+  				<table>
+  					<tr>
+  						<td>146%</td>
+  						<td>100%</td>
+  						<td>50%</td>
+  					</tr>
+  					<tr>
+  						<td>Уровень самоотдачи</td>
+  						<td>Соблюдение сроков</td>
+  						<td>Минимальная предоплата</td>
+  					</tr>
+  				</table>
+  			</div>
+  		</section>
+
+  		<section class="projects">
+  			<h2 class="visually-hidden">Наши проекты</h2>
+  			<ul class="projects-link">
+  				<li>
+  					<a href="#"><img src="html-academy-logo.jpeg" alt="Логотип html-academy"></a>
+  				</li>
+  				<li>
+  					<a href="#"><img src="borodinski-logo.jpeg" alt="Логотип borodinski"></a>
+  				</li>
+  				<li>
+  					<a href="#"><img src="pink-logo.jpeg" alt="Логотип pink"></a>
+  				</li>
+  				<li>
+  					<a href="#"><img src="mishka-logo.jpeg" alt="Логотип mishka"></a>
+  				</li>
+  			</ul>
+  		</section>
+  	</main>
+
+  	<footer>
+  		<div class="footer-contacts">
+  			<b class="contacts-title">Nёrds design studio</b>
+  			<p class="adress">191186, Санкт-Петербург,<br> ул. Большая Конюшенная, д.19/8</p>
+  			<p class="number">тел. +7(812)275-75-75</p>
+  			<a class="btn" href="#">Напишите нам</a>
+  		</div>
+  		<div class="footer-social">
+  			<b>Давайте дружить, это выгодно!</b>
+  			<p>Скидка 10% для друзей из социальных сетей.</p>
+  			<ul>
+  				<li><a class="social-button" href="#">Vkontakte</a></li>
+  				<li><a class="social-button" href="#">Facebook</a></li>
+  				<li><a class="social-button" href="#">Instagram</a></li>
+  			</ul>
+  		</div>
+  	</footer>
 
   </body>
 </html>
