--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <title>HTML Academy: Нёрдс</title>
     <title>Дизайн-студия Нёрдс</title>
   </head>
   <body>
-	<header class="main-header">
-  		<a class="main-header-logo" href="index.html">
+  	<header class="main-header">
+  		<a class="main-header-logo">
   			<img src="img/logo.jpeg" alt="Логотип дизайн-студии Nёrds">
   		</a>
   		<nav class="main-navigation">
@@ -19,65 +20,86 @@
   		  <a href="basket.html">Корзина</a>
   		</nav>
   	</header>
-  	<main class="container">
-  		<h1 class="page-title">Магазин готовых шаблонов</h1>
+    <main class="container">
 
-  		<section class="filters">
-        	<h2 class="visually-hidden">Фильтр товаров</h2>
-        	<!-- Здесь будет форма -->
-		</section>
+  		<h1 class="visually-hidden">Дизайн-студия Nerds</h1>
 
-		<section class="catalog">
-			<h2 class="visually-hidden">Каталог</h2>
+  		<div class="desk">
+  			<b class="slogan">Долго, дорого, скрупулезно.</b>
+  			<p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
+  			<a class="btn" href="#">Узнать больше</a>
+  		</div>
 
-			<p>Сортировать:</p>
-			<ul>
-				<li><span class="filter-item filter-item-current">По цене</span></li>
-				<li><span class="filter-item">По типу</span></li>
-				<li><span class="filter-item">По названию</span></li>
-			</ul>
+  		<section class="products">
+  			<h2 class="visually-hidden">Наши продукты</h2>
+  			<ul class="products-items">
+  				<li>
+  			  		<h3>Веб-сайты</h3>
+  			  		<p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+  			  		<a class="btn" href="#">Заказать</a>
+  				</li>
+				<li>
+  					<h3>Приложения</h3>
+  					<p>Покорите топ-10 приложений в AppleStore и Google Play</p>
+  					<a class="btn" href="#">Заказать</a>
+  				</li>
+				<li>
+  					<h3>Презентации</h3>
+  					<p>Вы даже не подозреваете насколько вы изумительны!</p>
+  					<a class="btn" href="#">Заказать</a>
+  				</li>
+  			</ul>
+  		</section>
 
-			<ul>
-				<li>
-					<a href="sedona.html">
-						<img src="img/sedona.jpeg" alt="Cайт для туристов Sedona">
-					</a>
-				</li>
-				<li>
-					<a href="pink.html">
-						<img src="img/pink.jpeg" alt="Приложение Pink">
-					</a>
-				</li>
-				<li>
-					<a href="borodinski.html">
-						<img src="img/borodinski.jpeg" alt="Барбершоп Borodinski">
-					</a>
-				</li>
-				<li>
-					<a href="mishka.html">
-						<img src="img/mishka.jpeg" alt="Милые штучки для дома Mishka">
-					</a>
-				</li>
-				<li>
-					<a href="school.html">
-						<img src="img/school.jpeg" alt="Обучающий портал А+">
-					</a>
-				</li>
-				<li>
-					<a href="kvast.html">
-						<img src="img/kvast.jpeg" alt="Магазин крафтового кваса Kvast">
-					</a>
-				</li>
-			</ul>
+  		<section class="">
+  			<h2 class="visually-hidden">О нас</h2>
+  			  <div class="info">
+  				<b>Мы - маленькая, но гордая дизайн-студия из Краснодара.</b>
+  				<p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
+  				<p>Выполняем заказы на разработку:</p>
+  				<ul class="text">
+  					<li>Веб-сайтов любой сложности</li>
+  					<li>Мобильных приложений для IOS и Android</li>
+  					<li>Слайдшоу и видео для корпоративных презентаций</li>
+  				</ul>
+  		      </div>
+  		      <div class="features">
+  				<img src="img/logo2.jpeg" alt="Логотип Nёrds">
+  				<p class="features-title">С 2004 года любим точность во всем:</p>
+  				<table>
+  					<tr>
+  						<td>146%</td>
+  						<td>100%</td>
+  						<td>50%</td>
+  					</tr>
+  					<tr>
+  						<td>Уровень самоотдачи</td>
+  						<td>Соблюдение сроков</td>
+  						<td>Минимальная предоплата</td>
+  					</tr>
+  				</table>
+  			</div>
+  		</section>
 
-        	<ul class="pagination-list">
-          		<li class="pagination-item pagination-item-current"><a>1</a></li>
-          		<li class="pagination-item"><a href="#">2</a></li>
-          		<li class="pagination-item"><a href="#">3</a></li>
-         		<li class="pagination-item-next"><a href="#">Следующая</a></li>
-        	</ul>
-		</section>
+  		<section class="projects">
+  			<h2 class="visually-hidden">Наши проекты</h2>
+  			<ul class="projects-link">
+  				<li>
+  					<a href="#"><img src="html-academy-logo.jpeg" alt="Логотип html-academy"></a>
+  				</li>
+  				<li>
+  					<a href="#"><img src="borodinski-logo.jpeg" alt="Логотип borodinski"></a>
+  				</li>
+  				<li>
+  					<a href="#"><img src="pink-logo.jpeg" alt="Логотип pink"></a>
+  				</li>
+  				<li>
+  					<a href="#"><img src="mishka-logo.jpeg" alt="Логотип mishka"></a>
+  				</li>
+  			</ul>
+  		</section>
   	</main>
+
   	<footer>
   		<div class="footer-contacts">
   			<b class="contacts-title">Nёrds design studio</b>
@@ -95,5 +117,6 @@
   			</ul>
   		</div>
   	</footer>
+
   </body>
 </html>
