--- a/index.html
+++ b/index.html
@@ -2,121 +2,140 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Нёрдс</title>
     <title>Дизайн-студия Нёрдс</title>
   </head>
   <body>
   	<header class="main-header">
-  		<a class="main-header-logo">
-  			<img src="img/logo.jpeg" alt="Логотип дизайн-студии Nёrds">
-  		</a>
+  	  <a class="main-header-logo">
+  	    <img src="img/logo.jpeg" width="#" height="#" alt="Логотип дизайн-студии Nёrds">
+  	  </a>
   		<nav class="main-navigation">
   		  <ul class="site-navigation">
-  			  <li><a href="studio.html">Студия</a></li>
-  			  <li><a href="clients.html">Клиенты</a></li>
-  			  <li><a href="shop.html">Магазин</a></li>
-  			  <li><a href="contacts.html">Контакты</a></li>
+  			 <li><a href="studio.html">Студия</a></li>
+  			 <li><a href="clients.html">Клиенты</a></li>
+  			 <li><a href="shop.html">Магазин</a></li>
+  			 <li><a href="contacts.html">Контакты</a></li>
   		  </ul>
-  		  <a href="basket.html">Корзина</a>
+  		  <ul class="shopping-navigation">
+            <li class="shopping-cart-link"><a href="cart.html">Корзина</a></li>
+          </ul>
   		</nav>
   	</header>
     <main class="container">
 
-  		<h1 class="visually-hidden">Дизайн-студия Nerds</h1>
+  	  <h1 class="visually-hidden">Дизайн-студия Nerds</h1>
 
-  		<div class="desk">
-  			<b class="slogan">Долго, дорого, скрупулезно.</b>
-  			<p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
-  			<a class="btn" href="#">Узнать больше</a>
-  		</div>
+  	  <section class="studio-features">
+        <h2 class="visually-hidden">Особенности студии</h2>
+        <ul class="studio-features-list">
+          <li class="studio-features-item">
+            <h3>Долго, дорого, скрупулезно</h3>
+            <p>Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
+            <a class="button" href="studio.html">Узнать больше</a>
+          </li>
+          <li class="studio-features-item">
+            <h3>Любим математику как никто другой</h3>
+            <p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
+            <a class="button" href="studio.html">Узнать больше</a>
+          </li>
+          <li class="studio-features-item">
+            <h3>Только ночь, только хардкор</h3>
+            <p>Работать днём, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
+            <a class="button" href="studio.html">Узнать больше</a>
+          </li>
+        </ul>
+      </section>
 
-  		<section class="products">
-  			<h2 class="visually-hidden">Наши продукты</h2>
-  			<ul class="products-items">
-  				<li>
-  			  		<h3>Веб-сайты</h3>
-  			  		<p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-  			  		<a class="btn" href="#">Заказать</a>
-  				</li>
-				<li>
-  					<h3>Приложения</h3>
-  					<p>Покорите топ-10 приложений в AppleStore и Google Play</p>
-  					<a class="btn" href="#">Заказать</a>
-  				</li>
-				<li>
-  					<h3>Презентации</h3>
-  					<p>Вы даже не подозреваете насколько вы изумительны!</p>
-  					<a class="btn" href="#">Заказать</a>
-  				</li>
-  			</ul>
+  	  <section class="products">
+  		<h2 class="visually-hidden">Наши продукты</h2>
+  		<ul class="products-items">
+  		  <li>
+  		    <h3>Веб-сайты</h3>
+  			<p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+  			<a class="btn" href="#">Заказать</a>
+  		  </li>
+		  <li>
+  			<h3>Приложения</h3>
+  			<p>Покорите топ-10 приложений в AppleStore и Google Play</p>
+  			<a class="btn" href="#">Заказать</a>
+  		  </li>
+		  <li>
+  			<h3>Презентации</h3>
+  			<p>Вы даже не подозреваете насколько вы изумительны!</p>
+  			<a class="btn" href="#">Заказать</a>
+  		  </li>
+  		</ul>
   		</section>
 
-  		<section class="">
-  			<h2 class="visually-hidden">О нас</h2>
-  			  <div class="info">
-  				<b>Мы - маленькая, но гордая дизайн-студия из Краснодара.</b>
-  				<p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
-  				<p>Выполняем заказы на разработку:</p>
-  				<ul class="text">
-  					<li>Веб-сайтов любой сложности</li>
-  					<li>Мобильных приложений для IOS и Android</li>
-  					<li>Слайдшоу и видео для корпоративных презентаций</li>
-  				</ul>
-  		      </div>
-  		      <div class="features">
-  				<img src="img/logo2.jpeg" alt="Логотип Nёrds">
-  				<p class="features-title">С 2004 года любим точность во всем:</p>
-  				<table>
-  					<tr>
+  		<section class="about-us">
+  		  <h2 class="visually-hidden">О нас</h2>
+  			<b>Мы - маленькая, но гордая дизайн-студия из Краснодара.</b>
+  			<p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
+  			<p>Выполняем заказы на разработку:</p>
+  			<ul class="text">
+  			  <li>Веб-сайтов любой сложности</li>
+  			  <li>Мобильных приложений для IOS и Android</li>
+  			  <li>Слайдшоу и видео для корпоративных презентаций</li>
+  			</ul>
+  		</section>
+  		   
+  		<section class="studio-stats">
+          <h2 class="visually-hidden">Немного статистики</h2>
+  		  <img src="img/logo2.jpeg" width="#" height="#" alt="Логотип Nёrds">
+  		  <b>С 2004 года любим точность во всем:</b>
+  				<table class="statistics">
+  					<tr class="percent">
   						<td>146%</td>
   						<td>100%</td>
   						<td>50%</td>
   					</tr>
-  					<tr>
+  					<tr class="description">
   						<td>Уровень самоотдачи</td>
   						<td>Соблюдение сроков</td>
   						<td>Минимальная предоплата</td>
   					</tr>
   				</table>
-  			</div>
   		</section>
 
   		<section class="projects">
-  			<h2 class="visually-hidden">Наши проекты</h2>
-  			<ul class="projects-link">
-  				<li>
-  					<a href="#"><img src="html-academy-logo.jpeg" alt="Логотип html-academy"></a>
-  				</li>
-  				<li>
-  					<a href="#"><img src="borodinski-logo.jpeg" alt="Логотип borodinski"></a>
-  				</li>
-  				<li>
-  					<a href="#"><img src="pink-logo.jpeg" alt="Логотип pink"></a>
-  				</li>
-  				<li>
-  					<a href="#"><img src="mishka-logo.jpeg" alt="Логотип mishka"></a>
-  				</li>
-  			</ul>
+  		  <h2 class="visually-hidden">Наши проекты</h2>
+  		  <ul class="projects-items">
+  		    <li>
+  			  <a href="#"><img src="html-academy-logo.jpeg" width="#" height="#" alt="Логотип html-academy"></a>
+  			</li>
+  			<li>
+  			  <a href="#"><img src="borodinski-logo.jpeg" width="#" height="#" alt="Логотип borodinski"></a>
+  			</li>
+  			<li>
+  			  <a href="#"><img src="pink-logo.jpeg" width="#" height="#" alt="Логотип pink"></a>
+  			</li>
+  			<li>
+  			  <a href="#"><img src="mishka-logo.jpeg" width="#" height="#" alt="Логотип mishka"></a>
+  			</li>
+  		  </ul>
   		</section>
   	</main>
 
   	<footer>
-  		<div class="footer-contacts">
-  			<b class="contacts-title">Nёrds design studio</b>
-  			<p class="adress">191186, Санкт-Петербург,<br> ул. Большая Конюшенная, д.19/8</p>
-  			<p class="number">тел. +7(812)275-75-75</p>
-  			<a class="btn" href="#">Напишите нам</a>
-  		</div>
-  		<div class="footer-social">
-  			<b>Давайте дружить, это выгодно!</b>
-  			<p>Скидка 10% для друзей из социальных сетей.</p>
-  			<ul>
-  				<li><a class="social-button" href="#">Vkontakte</a></li>
-  				<li><a class="social-button" href="#">Facebook</a></li>
-  				<li><a class="social-button" href="#">Instagram</a></li>
-  			</ul>
-  		</div>
+  	  <div class="footer-contacts">
+  	    <b>Nёrds design studio</b>
+  		<p>191186, Санкт-Петербург,<br> ул. Большая Конюшенная, д.19/8</p>
+  		<p>тел. +7(812)275-75-75</p>
+  		<a class="btn" href="#">Напишите нам</a>
+  	  </div>
+  	  <div class="footer-social">
+  		<b>Давайте дружить, это выгодно!</b>
+  		<p>Скидка 10% для друзей из социальных сетей.</p>
+  		<ul class="footer-social-buttons">
+  		  <li><a class="social-button" href="#">Vkontakte</a></li>
+  		  <li><a class="social-button" href="#">Facebook</a></li>
+  		  <li><a class="social-button" href="#">Instagram</a></li>
+  		</ul>
+  	  </div>
   	</footer>
-
+  	<section class="feedback-form">
+      <h2>Напишите нам</h2>
+      <!-- Место для формы -->
+    </section>
   </body>
 </html>
