--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
   	<header class="main-header">
   	  <a class="main-header-logo">
-  	    <img src="img/logo.jpeg" width="#" height="#" alt="Логотип дизайн-студии Nёrds">
+  	    <img src="img/logo.jpeg" width="100" height="100" alt="Логотип дизайн-студии Nёrds">
   	  </a>
   		<nav class="main-navigation">
   		  <ul class="site-navigation">
@@ -81,7 +81,7 @@
   		   
   		<section class="studio-stats">
           <h2 class="visually-hidden">Немного статистики</h2>
-  		  <img src="img/logo2.jpeg" width="#" height="#" alt="Логотип Nёrds">
+  		  <img src="img/logo2.jpeg" width="100" height="100" alt="Логотип Nёrds">
   		  <b>С 2004 года любим точность во всем:</b>
   				<table class="statistics">
   					<tr class="percent">
@@ -101,16 +101,16 @@
   		  <h2 class="visually-hidden">Наши проекты</h2>
   		  <ul class="projects-items">
   		    <li>
-  			  <a href="#"><img src="html-academy-logo.jpeg" width="#" height="#" alt="Логотип html-academy"></a>
+  			  <a href="#"><img src="html-academy-logo.jpeg" width="100" height="100" alt="Логотип html-academy"></a>
   			</li>
   			<li>
-  			  <a href="#"><img src="borodinski-logo.jpeg" width="#" height="#" alt="Логотип borodinski"></a>
+  			  <a href="#"><img src="borodinski-logo.jpeg" width="100" height="100" alt="Логотип borodinski"></a>
   			</li>
   			<li>
-  			  <a href="#"><img src="pink-logo.jpeg" width="#" height="#" alt="Логотип pink"></a>
+  			  <a href="#"><img src="pink-logo.jpeg" width="100" height="100" alt="Логотип pink"></a>
   			</li>
   			<li>
-  			  <a href="#"><img src="mishka-logo.jpeg" width="#" height="#" alt="Логотип mishka"></a>
+  			  <a href="#"><img src="mishka-logo.jpeg" width="100" height="100" alt="Логотип mishka"></a>
   			</li>
   		  </ul>
   		</section>
