--- a/index.html
+++ b/index.html
@@ -6,20 +6,22 @@
   </head>
   <body>
   	<header class="main-header">
-  	  <a class="main-header-logo">
-  	    <img src="img/logo.jpeg" width="100" height="100" alt="Логотип дизайн-студии Nёrds">
-  	  </a>
+  	  <div class="container">
+  	    <a class="main-header-logo">
+  	      <img src="img/logo.jpeg" width="100" height="100" alt="Логотип дизайн-студии Nёrds">
+  	    </a>
   		<nav class="main-navigation">
   		  <ul class="site-navigation">
-  			 <li><a href="studio.html">Студия</a></li>
-  			 <li><a href="clients.html">Клиенты</a></li>
-  			 <li><a href="shop.html">Магазин</a></li>
-  			 <li><a href="contacts.html">Контакты</a></li>
+  		    <li><a href="studio.html">Студия</a></li>
+  			<li><a href="clients.html">Клиенты</a></li>
+  			<li><a href="shop.html">Магазин</a></li>
+  			<li><a href="contacts.html">Контакты</a></li>
   		  </ul>
   		  <ul class="shopping-navigation">
             <li class="shopping-cart-link"><a href="cart.html">Корзина</a></li>
           </ul>
   		</nav>
+  	  </div>
   	</header>
     <main class="container">
 
