--- a/index.html
+++ b/index.html
@@ -23,50 +23,55 @@
   		</nav>
   	  </div>
   	</header>
-    <main class="container">
 
-  	  <h1 class="visually-hidden">Дизайн-студия Nerds</h1>
+    <main class="content">
 
-  	  <section class="studio-features">
-        <h2 class="visually-hidden">Особенности студии</h2>
-        <ul class="studio-features-list">
-          <li class="studio-features-item">
-            <h3>Долго, дорого, скрупулезно</h3>
-            <p>Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
-            <a class="button" href="studio.html">Узнать больше</a>
-          </li>
-          <li class="studio-features-item">
-            <h3>Любим математику как никто другой</h3>
-            <p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
-            <a class="button" href="studio.html">Узнать больше</a>
-          </li>
-          <li class="studio-features-item">
-            <h3>Только ночь, только хардкор</h3>
-            <p>Работать днём, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
-            <a class="button" href="studio.html">Узнать больше</a>
-          </li>
-        </ul>
-      </section>
+      <div class="page-title-wrapper">
+      	<div class="container">
+  	      <h1 class="visually-hidden">Дизайн-студия Nerds</h1>
+  	      <section class="studio-features">
+            <h2 class="visually-hidden">Особенности студии</h2>
+            <ul class="studio-features-list">
+              <li class="studio-features-item">
+                <h3>Долго, дорого, скрупулезно</h3>
+                <p>Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
+                <a class="button" href="studio.html">Узнать больше</a>
+              </li>
+              <li class="studio-features-item">
+                <h3>Любим математику как никто другой</h3>
+                <p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
+                <a class="button" href="studio.html">Узнать больше</a>
+              </li>
+              <li class="studio-features-item">
+                <h3>Только ночь, только хардкор</h3>
+                <p>Работать днём, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
+                <a class="button" href="studio.html">Узнать больше</a>
+              </li>
+            </ul>
+          </section>
+        </div>
+      </div>
 
-  	  <section class="products">
-  		<h2 class="visually-hidden">Наши продукты</h2>
-  		<ul class="products-items">
-  		  <li>
-  		    <h3>Веб-сайты</h3>
-  			<p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-  			<a class="btn" href="#">Заказать</a>
-  		  </li>
-		  <li>
-  			<h3>Приложения</h3>
-  			<p>Покорите топ-10 приложений в AppleStore и Google Play</p>
-  			<a class="btn" href="#">Заказать</a>
-  		  </li>
-		  <li>
-  			<h3>Презентации</h3>
-  			<p>Вы даже не подозреваете насколько вы изумительны!</p>
-  			<a class="btn" href="#">Заказать</a>
-  		  </li>
-  		</ul>
+	  <div class="main-container">
+  	    <section class="products">
+  		  <h2 class="visually-hidden">Наши продукты</h2>
+  		  <ul class="products-items">
+  		    <li>
+  		      <h3>Веб-сайты</h3>
+  			  <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+  			  <a class="btn" href="#">Заказать</a>
+  		    </li>
+		    <li>
+  			  <h3>Приложения</h3>
+  			  <p>Покорите топ-10 приложений в AppleStore и Google Play</p>
+  			  <a class="btn" href="#">Заказать</a>
+  		    </li>
+		    <li>
+  			  <h3>Презентации</h3>
+  			  <p>Вы даже не подозреваете насколько вы изумительны!</p>
+  			  <a class="btn" href="#">Заказать</a>
+  		    </li>
+  		  </ul>
   		</section>
 
   		<section class="about-us">
@@ -116,6 +121,7 @@
   			</li>
   		  </ul>
   		</section>
+  	  </div>
   	</main>
 
   	<footer>
