Изменения в раздел о нас

--- a/index.html
+++ b/index.html
@@ -35,17 +35,17 @@
               <li class="studio-features-item">
                 <h3>Долго, дорого, скрупулезно</h3>
                 <p>Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
-                <a class="button" href="studio.html">Узнать больше</a>
+                <a class="btn" href="studio.html">Узнать больше</a>
               </li>
               <li class="studio-features-item">
                 <h3>Любим математику как никто другой</h3>
                 <p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
-                <a class="button" href="studio.html">Узнать больше</a>
+                <a class="btn" href="studio.html">Узнать больше</a>
               </li>
               <li class="studio-features-item">
                 <h3>Только ночь, только хардкор</h3>
                 <p>Работать днём, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
-                <a class="button" href="studio.html">Узнать больше</a>
+                <a class="btn" href="studio.html">Узнать больше</a>
               </li>
             </ul>
           </section>
@@ -55,27 +55,28 @@
 	  <div class="main-container">
   	    <section class="products">
   		  <h2 class="visually-hidden">Наши продукты</h2>
-  		  <ul class="products-items">
-  		    <li>
+  		  <ul class="products-list">
+  		    <li class="projects-item">
   		      <h3>Веб-сайты</h3>
   			  <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-  			  <a class="btn" href="#">Заказать</a>
+  			  <a class="btn btn-web" href="#">Заказать</a>
   		    </li>
-		    <li>
+		    <li class="projects-item">
   			  <h3>Приложения</h3>
   			  <p>Покорите топ-10 приложений в AppleStore и Google Play</p>
-  			  <a class="btn" href="#">Заказать</a>
+  			  <a class="btn btn-app" href="#">Заказать</a>
   		    </li>
-		    <li>
+		    <li class="projects-item">
   			  <h3>Презентации</h3>
   			  <p>Вы даже не подозреваете насколько вы изумительны!</p>
-  			  <a class="btn" href="#">Заказать</a>
+  			  <a class="btn btn-presentation" href="#">Заказать</a>
   		    </li>
   		  </ul>
   		</section>
 
   		<section class="about-us">
-  		  <h2 class="visually-hidden">О нас</h2>
+  		  <div class="about-us-info">
+  		    <h2 class="visually-hidden">О нас</h2>
   			<b>Мы - маленькая, но гордая дизайн-студия из Краснодара.</b>
   			<p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
   			<p>Выполняем заказы на разработку:</p>
@@ -84,24 +85,24 @@
   			  <li>Мобильных приложений для IOS и Android</li>
   			  <li>Слайдшоу и видео для корпоративных презентаций</li>
   			</ul>
-  		</section>
-  		   
-  		<section class="studio-stats">
-          <h2 class="visually-hidden">Немного статистики</h2>
-  		  <img src="img/logo2.jpeg" width="100" height="100" alt="Логотип Nёrds">
-  		  <b>С 2004 года любим точность во всем:</b>
-  				<table class="statistics">
-  					<tr class="percent">
-  						<td>146%</td>
-  						<td>100%</td>
-  						<td>50%</td>
-  					</tr>
-  					<tr class="description">
-  						<td>Уровень самоотдачи</td>
-  						<td>Соблюдение сроков</td>
-  						<td>Минимальная предоплата</td>
-  					</tr>
-  				</table>
+  		  </div> 
+  		  <div class="about-us-stats">
+            <h2 class="visually-hidden">Немного статистики</h2>
+            <img src="img/logo2.jpeg" width="100" height="100" alt="Логотип Nёrds">
+  		    <b>С 2004 года любим точность во всем:</b>
+  			<table class="statistics">
+  			  <tr class="percent">
+  				<td>146%</td>
+  				<td>100%</td>
+  				<td>50%</td>
+  			  </tr>
+  			  <tr class="description">
+  				<td>Уровень самоотдачи</td>
+  				<td>Соблюдение сроков</td>
+  				<td>Минимальная предоплата</td>
+  			  </tr>
+  			</table>
+  		  </div>
   		</section>
 
   		<section class="projects">
