--- a/index.html
+++ b/index.html
@@ -25,30 +25,28 @@
   	</header>
 
     <main class="content">
+  	  <h1 class="visually-hidden">Дизайн-студия Nerds</h1>
 
-      <div class="page-title-wrapper">
-      	<div class="container">
-  	      <h1 class="visually-hidden">Дизайн-студия Nerds</h1>
-  	      <section class="studio-features">
-            <h2 class="visually-hidden">Особенности студии</h2>
-            <ul class="studio-features-list">
-              <li class="studio-features-item">
-                <h3>Долго, дорого, скрупулезно</h3>
-                <p>Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
-                <a class="btn" href="studio.html">Узнать больше</a>
-              </li>
-              <li class="studio-features-item">
-                <h3>Любим математику как никто другой</h3>
-                <p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
-                <a class="btn" href="studio.html">Узнать больше</a>
-              </li>
-              <li class="studio-features-item">
-                <h3>Только ночь, только хардкор</h3>
-                <p>Работать днём, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
-                <a class="btn" href="studio.html">Узнать больше</a>
-              </li>
-            </ul>
-          </section>
+  	  <div class="studio-features">
+  	    <div class="container">
+          <h2 class="visually-hidden">Особенности студии</h2>
+          <ul class="studio-features-list">
+            <li class="studio-features-item">
+              <h3>Долго, дорого, скрупулезно</h3>
+              <p>Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
+              <a class="btn" href="studio.html">Узнать больше</a>
+            </li>
+            <li class="studio-features-item">
+              <h3>Любим математику как никто другой</h3>
+              <p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
+              <a class="btn" href="studio.html">Узнать больше</a>
+            </li>
+            <li class="studio-features-item">
+              <h3>Только ночь, только хардкор</h3>
+              <p>Работать днём, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
+              <a class="btn" href="studio.html">Узнать больше</a>
+            </li>
+          </ul>
         </div>
       </div>
 
@@ -77,10 +75,10 @@
   		<section class="about-us">
   		  <div class="about-us-info">
   		    <h2 class="visually-hidden">О нас</h2>
-  			<b>Мы - маленькая, но гордая дизайн-студия из Краснодара.</b>
+  			<b class="about-us-title">Мы - маленькая, но гордая дизайн-студия из Краснодара.</b>
   			<p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
-  			<p>Выполняем заказы на разработку:</p>
-  			<ul class="text">
+  			<p class="orders-title">Выполняем заказы на разработку:</p>
+  			<ul class="orders-list">
   			  <li>Веб-сайтов любой сложности</li>
   			  <li>Мобильных приложений для IOS и Android</li>
   			  <li>Слайдшоу и видео для корпоративных презентаций</li>
@@ -91,23 +89,23 @@
             <img src="img/logo2.jpeg" width="100" height="100" alt="Логотип Nёrds">
   		    <b>С 2004 года любим точность во всем:</b>
   			<table class="statistics">
-  			  <tr class="percent">
+  			  <tr>
   				<td>146%</td>
   				<td>100%</td>
   				<td>50%</td>
   			  </tr>
-  			  <tr class="description">
-  				<td>Уровень самоотдачи</td>
-  				<td>Соблюдение сроков</td>
-  				<td>Минимальная предоплата</td>
+  			  <tr>
+  				<th>Уровень самоотдачи</th>
+  				<th>Соблюдение сроков</th>
+  				<th>Минимальная предоплата</th>
   			  </tr>
   			</table>
   		  </div>
   		</section>
 
-  		<section class="projects">
-  		  <h2 class="visually-hidden">Наши проекты</h2>
-  		  <ul class="projects-items">
+  		<section class="partners">
+  		  <h2 class="visually-hidden">Наши партнеры</h2>
+  		  <ul class="partners-items">
   		    <li>
   			  <a href="#"><img src="html-academy-logo.jpeg" width="100" height="100" alt="Логотип html-academy"></a>
   			</li>
@@ -142,9 +140,9 @@
   		</ul>
   	  </div>
   	</footer>
-  	<section class="feedback-form">
+  	<div class="feedback-form">
       <h2>Напишите нам</h2>
       <!-- Место для формы -->
-    </section>
+    </div>
   </body>
 </html>
