--- a/catalog.html
+++ b/catalog.html
@@ -6,126 +6,167 @@
   </head>
   <body>
 	<header class="main-header">
-  	  <a class="main-header-logo" href="index.html">
-  	    <img src="img/logo.jpeg" alt="Логотип дизайн-студии Nёrds">
-  	  </a>
-  	  <nav class="main-navigation">
-  		<ul class="site-navigation">
-  		  <li><a href="studio.html">Студия</a></li>
-  		  <li><a href="clients.html">Клиенты</a></li>
-  		  <li><a href="shop.html">Магазин</a></li>
-  		  <li><a href="contacts.html">Контакты</a></li>
-  		 </ul>
-  		<ul class="shopping-navigation">
+  	  <div class="container">
+  	    <a class="main-header-logo" href="index.html">
+  	      <img src="img/logo.jpeg" width="100" height="100" alt="Логотип дизайн-студии Nёrds">
+  	    </a>
+  		<nav class="main-navigation">
+  		  <ul class="site-navigation">
+  		    <li><a href="studio.html">Студия</a></li>
+  			<li><a href="clients.html">Клиенты</a></li>
+  			<li><a href="shop.html">Магазин</a></li>
+  			<li><a href="contacts.html">Контакты</a></li>
+  		  </ul>
+  		  <ul class="shopping-navigation">
             <li class="shopping-cart-link"><a href="cart.html">Корзина</a></li>
-        </ul>
-  	  </nav>
+          </ul>
+  		</nav>
+  	  </div>
   	</header>
-  	<main class="container">
-  	  <h1 class="page-title">Магазин готовых шаблонов</h1>
+  	<main class="main-catalog">
+  	  <div class="page-title-wrapper">
+  	  	<div class="container">
+  	      <h1 class="page-title">Магазин готовых шаблонов</h1>
+  	    </div>
+  	  </div>
+      <div class="main-container">
 
-  	  <section class="filters">
-        <h2 class="visually-hidden">Фильтр товаров</h2>
-        	<!-- Здесь будет форма -->
-	  </section>
+          <!-- Форма будет дорабатываться -->
+  	    <section class="filters">
+  	  	  <h2 class="visually-hidden">Фильтр товаров</h2>
+  	  	  <div class="filter-group">
+            <h3 class="filters-title">Стоимость</h3>
+          </div>
+          <div class="filter-group">
+            <h3 class="filters-title">Сетка</h3>
+            <ul class="filters-list">
+          	  <li>Адаптивная</li>
+          	  <li>Фиксированная</li>
+          	  <li>Резиновая</li>
+            </ul>
+          </div>
+          <div class="filter-group">
+            <h3 class="filters-title">Особенности</h3>
+            <ul class="filters-list">
+          	  <li>Слайдер</li>
+          	  <li>Блок преимуществ</li>
+          	  <li>Новости</li>
+          	  <li>Галерея</li>
+          	  <li>Корзина</li>
+            </ul>
+          </div>
+	    </section>
+          <!-- Форма будет дорабатываться -->
 
-	  <section class="catalog">
-		<h2 class="visually-hidden">Каталог</h2>
-		<div class="catalog-sorting">
-          <b>Сортировать:</b>
-		  <ul class="sorting-buttons">
-            <li>
-              <button class="sorting-current-btn">По цене</button>
+	    <section class="catalog">
+		  <h2 class="visually-hidden">Каталог</h2>
+
+		  <div class="catalog-sorting">
+            <b>Сортировать:</b>
+		    <ul class="sorting-buttons">
+              <li>
+                <a class="sorting-current-btn" href="#">По цене</a>
+              </li>
+              <li>
+                <a class="sorting-btn" href="#">По типу</a>
+              </li>
+              <li>
+                <a class="sorting-btn" href="#">По названию</a>
+              </li>
+            </ul>
+            <ul class="sorting-range">
+              <li>
+                <a class="sotring-range-down" href="#">Сортировка по убыванию</a>
+              </li>
+              <li>
+                <a class="sotring-range-up" href="#">Сортировка по возрастанию</a>
+              </li>
+            </ul>
+          </div>
+        
+          <ul class="catalog-list">
+		    <li class="catalog-item">
+			  <img src="img/sedona.jpeg" width="100" height="100" alt="Sedona">
+			  <div class="description-hover">
+                <h3><a class=".catalog-item-title">Sedona</a></h3>
+                <p>Информационный сайт для туристов</p>
+                <a class="price-btn" href="#">9900 руб.</a>
+              </div>
+		    </li>
+		    <li class="catalog-item">
+			  <img src="img/pink.jpeg" width="100" height="100" alt="Pink App">
+			  <div class="description-hover">
+                <h3><a class=".catalog-item-title">Pink App</a></h3>
+                <p>Продуктовый лендинг  приложения для iOs и Android</p>
+                <a class="price-btn" href="#">9900 руб.</a>
+              </div>
             </li>
-            <li>
-              <button class="sorting-btn">По типу</button>
-            </li>
-            <li>
-              <button class="sorting-btn">По названию</button>
-            </li>
-            <li>
-              <button class="sotring-range-down">Сортировка по убыванию</button>
-            </li>
-            <li>
-              <button class="sotring-range-up">Сортировка по возрастанию</button>
-            </li>
-          </ul>
-         </div>
-         <div class="catalog-items">
-           <ul>
-		     <li>
-			   <img src="img/sedona.jpeg" width="100" height="100" alt="Sedona">
-			   <div class="description-hover">
-                 <h3>Sedona</h3>
-                 <p>Информационный сайт для туристов</p>
-                 <a class="button" href="#">9900 руб.</a>
-               </div>
-			 </li>
-		     <li>
-			   <img src="img/pink.jpeg" width="100" height="100" alt="Pink App">
-			   <div class="description-hover">
-                 <h3>Pink App</h3>
-                 <p>Продуктовый лендинг  приложения для iOs и Android</p>
-                 <a class="button" href="#">9900 руб.</a>
-               </div>
-             </li>
-			 <li>
-			   <img src="img/borodinski.jpeg" width="100" height="100" alt=" Borodinski">
-			   <div class="description-hover">
-                 <h3>Barbershop</h3>
-                 <p>Сайт салона красоты. Для мужчин, да.</p>
-                 <a class="button" href="#">9900 руб.</a>
-               </div>	
-			 </li>
-			 <li>
-			   <img src="img/mishka.jpeg" width="100" height="100" alt="Mishka">
-			   <div class="description-hover">
-                 <h3>Mishka</h3>
-                 <p>Интернет-магазин вязанных игрушек</p>
-                 <a class="button" href="#">9900 руб.</a>
-               </div>	
-			 </li>
-			 <li>
-			   <img src="img/school.jpeg" width="100" height="100" alt="А plus">
-			   <div class="description-hover">
-                 <h3>A plus</h3>
-                 <p>Лендинг курсов повышения квалификации</p>
-                 <a class="button" href="#">9900 руб.</a>
-               </div>	
-			 </li>
-			 <li>
-			   <img src="img/kvast.jpeg" width="100" height="100" alt="Kvast">
-		       <div class="description-hover">
-                 <h3>Кваст</h3>
-                 <p>Промо-сайт производителя крафтового кваса</p>
-                 <a class="button" href="#">9900 руб.</a>
-               </div>
-			 </li>
-			</ul>
-		  </div>
+	        <li class="catalog-item">
+			  <img src="img/borodinski.jpeg" width="100" height="100" alt=" Borodinski">
+			  <div class="description-hover">
+                <h3><a class=".catalog-item-title">Barbershop</a></h3>
+                <p>Сайт салона красоты. Для мужчин, да.</p>
+                <a class="price-btn" href="#">9900 руб.</a>
+              </div>	
+	        </li>
+		    <li class="catalog-item">
+			  <img src="img/mishka.jpeg" width="100" height="100" alt="Mishka">
+              <div class="description-hover">
+                <h3><a class=".catalog-item-title">Mishka</a></h3>
+                <p>Интернет-магазин вязанных игрушек</p>
+                <a class="price-btn" href="#">9900 руб.</a>
+              </div>	
+		    </li>
+		    <li class="catalog-item">
+			  <img src="img/school.jpeg" width="100" height="100" alt="А plus">
+			  <div class="description-hover">
+                <h3><a class=".catalog-item-title">A plus</a></h3>
+                <p>Лендинг курсов повышения квалификации</p>
+                <a class="price-btn" href="#">9900 руб.</a>
+              </div>	
+		    </li>
+		    <li class="catalog-item">
+			  <img src="img/kvast.jpeg" width="100" height="100" alt="Kvast">
+		      <div class="description-hover">
+                <h3><a class=".catalog-item-title">Кваст</a></h3>
+                <p>Промо-сайт производителя крафтового кваса</p>
+                <a class="price-btn" href="#">9900 руб.</a>
+              </div>
+		    </li>
+		  </ul>
+		 
           <ul class="pagination-list">
-          <li class="pagination-item pagination-item-current"><a>1</a></li>
+            <li class="pagination-item pagination-item-current"><a>1</a></li>
             <li class="pagination-item"><a href="#">2</a></li>
-          	<li class="pagination-item"><a href="#">3</a></li>
-         	<li class="pagination-item-next"><a href="#">Следующая</a></li>
+            <li class="pagination-item"><a href="#">3</a></li>
+            <li class="pagination-item-next"><a href="#">Следующая</a></li>
           </ul>
-		</section>
+	    </section>
+	  </div>
   	</main>
     <footer>
-  	  <div class="footer-contacts">
-  	    <b>Nёrds design studio</b>
-  		<p>191186, Санкт-Петербург,<br> ул. Большая Конюшенная, д.19/8</p>
-  		<p>тел. +7(812)275-75-75</p>
-  		<a class="btn" href="#">Напишите нам</a>
+      <div class="map">
+  	    <div class="footer-contacts">
+  	      <b>Nёrds design studio</b>
+  		  <p>191186, Санкт-Петербург,<br> ул. Большая Конюшенная, д.19/8</p>
+  		  <p>тел. +7(812)275-75-75</p>
+  		  <a class="btn" href="#">Напишите нам</a>
+  	    </div>
   	  </div>
-  	  <div class="footer-social">
-  		<b>Давайте дружить, это выгодно!</b>
-  		<p>Скидка 10% для друзей из социальных сетей.</p>
-  		<ul class="footer-social-buttons">
-  		  <li><a class="social-button" href="#">Vkontakte</a></li>
-  		  <li><a class="social-button" href="#">Facebook</a></li>
-  		  <li><a class="social-button" href="#">Instagram</a></li>
-  		</ul>
+  	  <div class="container">
+  	  	<div class="footer-wrapper">
+  	      <div class="social">
+  	      	<div class="discount">
+  		      <b>Давайте дружить, это выгодно!</b>
+              <p>Скидка 10% для друзей из социальных сетей.</p>
+            </div>
+  		    <ul class="footer-social-buttons">
+  		      <li><a class="social-button" href="#">Vkontakte</a></li>
+  		      <li><a class="social-button" href="#">Facebook</a></li>
+  		      <li><a class="social-button" href="#">Instagram</a></li>
+  		    </ul>
+  	      </div>
+  	    </div>
   	  </div>
   	</footer>
   	<section class="feedback-form">
