поправила футер на основной странице

--- a/index.html
+++ b/index.html
@@ -123,21 +123,29 @@
   	  </div>
   	</main>
 
-  	<footer>
-  	  <div class="footer-contacts">
-  	    <b>Nёrds design studio</b>
-  		<p>191186, Санкт-Петербург,<br> ул. Большая Конюшенная, д.19/8</p>
-  		<p>тел. +7(812)275-75-75</p>
-  		<a class="btn" href="#">Напишите нам</a>
+  	 <footer>
+      <div class="map">
+  	    <div class="footer-contacts">
+  	      <b>Nёrds design studio</b>
+  		  <p>191186, Санкт-Петербург,<br> ул. Большая Конюшенная, д.19/8</p>
+  		  <p>тел. +7(812)275-75-75</p>
+  		  <a class="btn" href="#">Напишите нам</a>
+  	    </div>
   	  </div>
-  	  <div class="footer-social">
-  		<b>Давайте дружить, это выгодно!</b>
-  		<p>Скидка 10% для друзей из социальных сетей.</p>
-  		<ul class="footer-social-buttons">
-  		  <li><a class="social-button" href="#">Vkontakte</a></li>
-  		  <li><a class="social-button" href="#">Facebook</a></li>
-  		  <li><a class="social-button" href="#">Instagram</a></li>
-  		</ul>
+  	  <div class="container">
+  	  	<div class="footer-wrapper">
+  	      <div class="social">
+  	      	<div class="discount">
+  		      <b>Давайте дружить, это выгодно!</b>
+              <p>Скидка 10% для друзей из социальных сетей.</p>
+            </div>
+  		    <ul class="footer-social-buttons">
+  		      <li><a class="social-button" href="#">Vkontakte</a></li>
+  		      <li><a class="social-button" href="#">Facebook</a></li>
+  		      <li><a class="social-button" href="#">Instagram</a></li>
+  		    </ul>
+  	      </div>
+  	    </div>
   	  </div>
   	</footer>
   	<div class="feedback-form">
