поправила форму обратной связи

--- a/catalog.html
+++ b/catalog.html
@@ -169,9 +169,9 @@
   	    </div>
   	  </div>
   	</footer>
-  	<section class="feedback-form">
+  	<div class="feedback-form">
       <h2>Напишите нам</h2>
       <!-- Место для формы -->
-    </section>
+    </div>
   </body>
 </html>
