--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   	<header class="main-header">
   	  <div class="container">
   	    <a class="main-header-logo">
-  	      <img src="img/logo.jpeg" width="100" height="100" alt="Логотип дизайн-студии Nёrds">
+  	      <img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип дизайн-студии Nёrds">
   	    </a>
   		<nav class="main-navigation">
   		  <ul class="site-navigation">
@@ -86,20 +86,22 @@
   		  </div> 
   		  <div class="about-us-stats">
             <h2 class="visually-hidden">Немного статистики</h2>
-            <img src="img/logo2.jpeg" width="100" height="100" alt="Логотип Nёrds">
-  		    <b>С 2004 года любим точность во всем:</b>
-  			<table class="statistics">
-  			  <tr>
-  				<td>146%</td>
-  				<td>100%</td>
-  				<td>50%</td>
-  			  </tr>
-  			  <tr>
-  				<th>Уровень самоотдачи</th>
-  				<th>Соблюдение сроков</th>
-  				<th>Минимальная предоплата</th>
-  			  </tr>
-  			</table>
+            <img src="img/nerds-illustration.png" width="360" height="208" alt="Логотип Nёrds">
+            <div class="statistics-info">
+  		      <b>С 2004 года любим точность во всем:</b>
+  			  <table class="statistics">
+  			    <tr>
+  				  <td>146%</td>
+  				  <td>100%</td>
+  				  <td>50%</td>
+  			    </tr>
+  			    <tr>
+  				  <th>Уровень самоотдачи</th>
+  				  <th>Соблюдение сроков</th>
+  				  <th>Минимальная предоплата</th>
+  			    </tr>
+  			  </table>
+  		    </div>
   		  </div>
   		</section>
 
@@ -107,16 +109,16 @@
   		  <h2 class="visually-hidden">Наши партнеры</h2>
   		  <ul class="partners-items">
   		    <li>
-  			  <a href="#"><img src="html-academy-logo.jpeg" width="100" height="100" alt="Логотип html-academy"></a>
+  			  <a href="#"><img src="img/logo-1.png" width="199" height="68" alt="Логотип html-academy"></a>
   			</li>
   			<li>
-  			  <a href="#"><img src="borodinski-logo.jpeg" width="100" height="100" alt="Логотип borodinski"></a>
+  			  <a href="#"><img src="img/logo-2.png" width="209" height="90" alt="Логотип borodinski"></a>
   			</li>
   			<li>
-  			  <a href="#"><img src="pink-logo.jpeg" width="100" height="100" alt="Логотип pink"></a>
+  			  <a href="#"><img src="img/logo-3.png" width="185" height="52" alt="Логотип pink"></a>
   			</li>
   			<li>
-  			  <a href="#"><img src="mishka-logo.jpeg" width="100" height="100" alt="Логотип mishka"></a>
+  			  <a href="#"><img src="img/logo-4.png" width="173" height="84" alt="Логотип mishka"></a>
   			</li>
   		  </ul>
   		</section>
