добавляю контентные изображения (недостающие)

--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
 	<header class="main-header">
   	  <div class="container">
   	    <a class="main-header-logo" href="index.html">
-  	      <img src="img/logo.jpeg" width="100" height="100" alt="Логотип дизайн-студии Nёrds">
+  	      <img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип дизайн-студии Nёrds">
   	    </a>
   		<nav class="main-navigation">
   		  <ul class="site-navigation">
@@ -86,52 +86,52 @@
         
           <ul class="catalog-list">
 		    <li class="catalog-item">
-			  <img src="img/sedona.jpeg" width="100" height="100" alt="Sedona">
 			  <div class="description-hover">
                 <h3><a class=".catalog-item-title">Sedona</a></h3>
                 <p>Информационный сайт для туристов</p>
                 <a class="price-btn" href="#">9900 руб.</a>
               </div>
+              <img src="img/img-sedona.jpg" width="360" height="576" alt="Sedona">
 		    </li>
 		    <li class="catalog-item">
-			  <img src="img/pink.jpeg" width="100" height="100" alt="Pink App">
 			  <div class="description-hover">
                 <h3><a class=".catalog-item-title">Pink App</a></h3>
                 <p>Продуктовый лендинг  приложения для iOs и Android</p>
                 <a class="price-btn" href="#">9900 руб.</a>
               </div>
+              <img src="img/img-pink.jpg" width="360" height="576" alt="Pink App">
             </li>
 	        <li class="catalog-item">
-			  <img src="img/borodinski.jpeg" width="100" height="100" alt=" Borodinski">
 			  <div class="description-hover">
                 <h3><a class=".catalog-item-title">Barbershop</a></h3>
                 <p>Сайт салона красоты. Для мужчин, да.</p>
                 <a class="price-btn" href="#">9900 руб.</a>
               </div>	
+              <img src="img/img-barbershop.jpg" width="360" height="576" alt=" Borodinski">
 	        </li>
 		    <li class="catalog-item">
-			  <img src="img/mishka.jpeg" width="100" height="100" alt="Mishka">
               <div class="description-hover">
                 <h3><a class=".catalog-item-title">Mishka</a></h3>
                 <p>Интернет-магазин вязанных игрушек</p>
                 <a class="price-btn" href="#">9900 руб.</a>
               </div>	
+              <img src="img/img-mishka.jpg" width="360" height="576" alt="Mishka">
 		    </li>
 		    <li class="catalog-item">
-			  <img src="img/school.jpeg" width="100" height="100" alt="А plus">
 			  <div class="description-hover">
                 <h3><a class=".catalog-item-title">A plus</a></h3>
                 <p>Лендинг курсов повышения квалификации</p>
                 <a class="price-btn" href="#">9900 руб.</a>
-              </div>	
+              </div>
+              <img src="img/img-aplus.jpg" width="360" height="576" alt="А plus">	
 		    </li>
 		    <li class="catalog-item">
-			  <img src="img/kvast.jpeg" width="100" height="100" alt="Kvast">
 		      <div class="description-hover">
                 <h3><a class=".catalog-item-title">Кваст</a></h3>
                 <p>Промо-сайт производителя крафтового кваса</p>
                 <a class="price-btn" href="#">9900 руб.</a>
               </div>
+              <img src="img/img-kvast.jpg" width="360" height="576" alt="Kvast">
 		    </li>
 		  </ul>
 		 
@@ -152,6 +152,7 @@
   		  <p>тел. +7(812)275-75-75</p>
   		  <a class="btn" href="#">Напишите нам</a>
   	    </div>
+  	    <img src="img/map.jpg"> <!--как разместить значок нерд на карте?-->
   	  </div>
   	  <div class="container">
   	  	<div class="footer-wrapper">
