--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
   		  <p>тел. +7(812)275-75-75</p>
   		  <a class="btn" href="#">Напишите нам</a>
   	    </div>
+  	    <img src="img/map.jpg"> <!--как разместить значок нерд на карте?-->
   	  </div>
   	  <div class="container">
   	  	<div class="footer-wrapper">
