--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   		  <ul class="site-navigation">
   		    <li><a href="studio.html">Студия</a></li>
   			<li><a href="clients.html">Клиенты</a></li>
-  			<li><a href="shop.html">Магазин</a></li>
+  			<li><a href="catalog.html">Магазин</a></li>
   			<li><a href="contacts.html">Контакты</a></li>
   		  </ul>
   		  <ul class="shopping-navigation">
@@ -32,16 +32,19 @@
           <h2 class="visually-hidden">Особенности студии</h2>
           <ul class="studio-features-list">
             <li class="studio-features-item">
+              <img src="img/illustration-1.png">
               <h3>Долго, дорого, скрупулезно</h3>
               <p>Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
               <a class="btn" href="studio.html">Узнать больше</a>
             </li>
             <li class="studio-features-item">
+              <img src="img/illustration-2.png">
               <h3>Любим математику как никто другой</h3>
               <p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
               <a class="btn" href="studio.html">Узнать больше</a>
             </li>
             <li class="studio-features-item">
+              <img src="img/illustration-3.png">
               <h3>Только ночь, только хардкор</h3>
               <p>Работать днём, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
               <a class="btn" href="studio.html">Узнать больше</a>
@@ -54,17 +57,17 @@
   	    <section class="products">
   		  <h2 class="visually-hidden">Наши продукты</h2>
   		  <ul class="products-list">
-  		    <li class="projects-item">
+  		    <li class="products-item">
   		      <h3>Веб-сайты</h3>
   			  <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
   			  <a class="btn btn-web" href="#">Заказать</a>
   		    </li>
-		    <li class="projects-item">
+		    <li class="products-item">
   			  <h3>Приложения</h3>
   			  <p>Покорите топ-10 приложений в AppleStore и Google Play</p>
   			  <a class="btn btn-app" href="#">Заказать</a>
   		    </li>
-		    <li class="projects-item">
+		    <li class="products-item">
   			  <h3>Презентации</h3>
   			  <p>Вы даже не подозреваете насколько вы изумительны!</p>
   			  <a class="btn btn-presentation" href="#">Заказать</a>
