кнопки раздела наши продукты

--- a/index.html
+++ b/index.html
@@ -176,9 +176,9 @@
           <label for="feedback-text-of-the-letter">Текст письма:</label>
       	  <input id="feedback-text-of-the-letter" type="text" name="text-of-the-letter" value="" placeholder="В свободной форме">  
       	</p>  
-      	<button class="button" type="submit">Отправить</button>
+      	<button class="btn" type="submit">Отправить</button>
       </form>
-      <button class="modal-close" type="button">Закрыть</button>
+      <button class="modal-close" type="btn">Закрыть</button>
     </div>
   </body>
 </html>
