стили странички каталога

--- a/catalog.html
+++ b/catalog.html
@@ -31,7 +31,7 @@
   	<main class="main-catalog">
   	  <div class="page-title-wrapper">
   	  	<div class="container">
-  	      <h1 class="page-title">Магазин готовых шаблонов</h1>
+  	      <h1>Магазин готовых шаблонов</h1>
   	    </div>
   	  </div>
       <div class="main-container">
@@ -83,7 +83,7 @@
           	      </li>
                 </ul>
               </fieldset>
-              <button type="submit" class="filter-button button">Показать</button>
+              <button type="submit" class="filter-button btn">Показать</button>
             </form>
 	    </section>
           
@@ -95,7 +95,7 @@
             <b>Сортировать:</b>
 		    <ul class="sorting-buttons">
               <li>
-                <a class="sorting-current-btn" href="#">По цене</a>
+                <a class="sorting-btn" href="#">По цене</a>
               </li>
               <li>
                 <a class="sorting-btn" href="#">По типу</a>
@@ -106,10 +106,10 @@
             </ul>
             <ul class="sorting-range">
               <li>
-                <button class="button sorting-button sorting-button-down" type="button">Сортировка по убыванию</button>
+                <button class="btn sorting-btn sorting-btn-down" type="button">Сортировка по убыванию</button>
               </li>
               <li>
-                <button class="button sorting-button sorting-button-up" type="button">Сортировка по возрастанию</button>
+                <button class="btn sorting-btn sorting-btn-up" type="button">Сортировка по возрастанию</button>
               </li>
             </ul>
           </div>
@@ -117,49 +117,49 @@
           <ul class="catalog-list">
 		    <li class="catalog-item">
 			  <div class="description-hover">
-                <h3><a class=".catalog-item-title">Sedona</a></h3>
+                <h3><a class="catalog-item-title">Sedona</a></h3>
                 <p>Информационный сайт для туристов</p>
-                <a class="price-btn" href="#">9900 руб.</a>
+                <a class="btn price-btn" href="#">9900 руб.</a>
               </div>
               <img src="img/img-sedona.jpg" width="360" height="576" alt="Sedona">
 		    </li>
 		    <li class="catalog-item">
 			  <div class="description-hover">
-                <h3><a class=".catalog-item-title">Pink App</a></h3>
+                <h3><a class="catalog-item-title">Pink App</a></h3>
                 <p>Продуктовый лендинг  приложения для iOs и Android</p>
-                <a class="price-btn" href="#">9900 руб.</a>
+                <a class="btn price-btn" href="#">9900 руб.</a>
               </div>
               <img src="img/img-pink.jpg" width="360" height="576" alt="Pink App">
             </li>
 	        <li class="catalog-item">
 			  <div class="description-hover">
-                <h3><a class=".catalog-item-title">Barbershop</a></h3>
+                <h3><a class="catalog-item-title">Barbershop</a></h3>
                 <p>Сайт салона красоты. Для мужчин, да.</p>
-                <a class="price-btn" href="#">9900 руб.</a>
+                <a class="btn price-btn" href="#">9900 руб.</a>
               </div>	
               <img src="img/img-barbershop.jpg" width="360" height="576" alt=" Borodinski">
 	        </li>
 		    <li class="catalog-item">
               <div class="description-hover">
-                <h3><a class=".catalog-item-title">Mishka</a></h3>
+                <h3><a class="catalog-item-title">Mishka</a></h3>
                 <p>Интернет-магазин вязанных игрушек</p>
-                <a class="price-btn" href="#">9900 руб.</a>
+                <a class="btn price-btn" href="#">9900 руб.</a>
               </div>	
               <img src="img/img-mishka.jpg" width="360" height="576" alt="Mishka">
 		    </li>
 		    <li class="catalog-item">
 			  <div class="description-hover">
-                <h3><a class=".catalog-item-title">A plus</a></h3>
+                <h3><a class="catalog-item-title">A plus</a></h3>
                 <p>Лендинг курсов повышения квалификации</p>
-                <a class="price-btn" href="#">9900 руб.</a>
+                <a class="btn price-btn" href="#">9900 руб.</a>
               </div>
               <img src="img/img-aplus.jpg" width="360" height="576" alt="А plus">	
 		    </li>
 		    <li class="catalog-item">
 		      <div class="description-hover">
-                <h3><a class=".catalog-item-title">Кваст</a></h3>
+                <h3><a class="catalog-item-title">Кваст</a></h3>
                 <p>Промо-сайт производителя крафтового кваса</p>
-                <a class="price-btn" href="#">9900 руб.</a>
+                <a class="btn price-btn" href="#">9900 руб.</a>
               </div>
               <img src="img/img-kvast.jpg" width="360" height="576" alt="Kvast">
 		    </li>
@@ -169,7 +169,7 @@
             <li class="pagination-item pagination-item-current"><a>1</a></li>
             <li class="pagination-item"><a href="#">2</a></li>
             <li class="pagination-item"><a href="#">3</a></li>
-            <li class="pagination-item-next"><a href="#">Следующая</a></li>
+            <li class="pagination-item pagination-item-next"><a href="#">Следующая</a></li>
           </ul>
 	    </section>
 	  </div>
