--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
   		<section class="partners">
   		  <h2 class="visually-hidden">Наши партнеры</h2>
-  		  <ul class="partners-items">
+  		  <ul class="partners-list">
   		    <li>
   			  <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo-1.png" width="199" height="68" alt="Логотип html-academy"></a>
   			</li>
