--- a/index.html
+++ b/index.html
@@ -36,17 +36,17 @@
   	    <div class="container">
           <h2 class="visually-hidden">Особенности студии</h2>
           <ul class="studio-features-list">
-            <li class="studio-features-item">
+            <li class="studio-features-item studio-features-item-1">
               <h3>Долго, дорого, скрупулезно</h3>
               <p>Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
               <a class="btn" href="studio.html">Узнать больше</a>
             </li>
-            <li class="studio-features-item">
+            <li class="studio-features-item studio-features-item-2">
               <h3>Любим математику как никто другой</h3>
               <p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
               <a class="btn" href="studio.html">Узнать больше</a>
             </li>
-            <li class="studio-features-item">
+            <li class="studio-features-item studio-features-item-3">
               <h3>Только ночь, только хардкор</h3>
               <p>Работать днём, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
               <a class="btn" href="studio.html">Узнать больше</a>
