Правки стилей после проверки

--- a/catalog.html
+++ b/catalog.html
@@ -38,10 +38,10 @@
   	    <section class="filters">
   	  	  <h2 class="visually-hidden">Фильтр товаров</h2>
   	  	    <form class="filter" method="get" action="https://echo.htmlacademy.ru">
-              <fieldset>
+              <fieldset class="filter-group">
               	<legend>Стоимость</legend>
               </fieldset>
-              <fieldset>
+              <fieldset class="filter-group">
                 <legend>Сетка</legend>
                 <ul class="filters-list">
           	      <li>
@@ -58,7 +58,7 @@
           	      </li>
                 </ul>
               </fieldset>
-              <fieldset>
+              <fieldset class="filter-group">
                 <legend>Особенности</legend>
                 <ul class="filters-list">
           	      <li>
