--- a/index.html
+++ b/index.html
@@ -117,16 +117,16 @@
   		  <h2 class="visually-hidden">Наши партнеры</h2>
   		  <ul class="partners-list">
   		    <li>
-  			  <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo-1.png" width="199" height="68" alt="Логотип html-academy"></a>
+  			  <a  class="partners-link" href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo-1.png" width="199" height="68" alt="Логотип html-academy"></a>
   			</li>
   			<li>
-  			  <a href="#"><img src="img/logo-2.png" width="209" height="90" alt="Логотип borodinski"></a>
+  			  <a class="partners-link" href="#"><img src="img/logo-2.png" width="209" height="90" alt="Логотип borodinski"></a>
   			</li>
   			<li>
-  			  <a href="#"><img src="img/logo-3.png" width="185" height="52" alt="Логотип pink"></a>
+  			  <a class="partners-link" href="#"><img src="img/logo-3.png" width="185" height="52" alt="Логотип pink"></a>
   			</li>
   			<li>
-  			  <a href="#"><img src="img/logo-4.png" width="173" height="84" alt="Логотип mishka"></a>
+  			  <a class="partners-link" href="#"><img src="img/logo-4.png" width="173" height="84" alt="Логотип mishka"></a>
   			</li>
   		  </ul>
   		</section>
