сетки главная страница

--- a/catalog.html
+++ b/catalog.html
@@ -34,7 +34,7 @@
   	      <h1>Магазин готовых шаблонов</h1>
   	    </div>
   	  </div>
-      <div class="main-container">
+      <div class="main-container-catalog">
   	    <section class="filters">
   	  	  <h2 class="visually-hidden">Фильтр товаров</h2>
   	  	    <form class="filter" method="get" action="https://echo.htmlacademy.ru">
@@ -53,8 +53,8 @@
           	      	<label for="filter-fixed">Фиксированная</label>
           	      </li>
           	      <li>
-          	      	<input class="visually-hidden filter-input filter-input-radio" type="radio" name="product-group" value="rubber" id="filter-rubber">
-          	      	<label for="filter-rubber">Резиновая</label>
+          	      	<input class="visually-hidden filter-input filter-input-radio" type="radio" name="product-group" value="fluid" id="filter-fluid">
+          	      	<label for="filter-fluid">Резиновая</label>
           	      </li>
                 </ul>
               </fieldset>
