--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   	  <h1 class="visually-hidden">Дизайн-студия Nerds</h1>
 
   	  <div class="studio-features">
-  	    <div class="container">
+  	    <div class="container-studio-feachers">
           <h2 class="visually-hidden">Особенности студии</h2>
           <ul class="studio-features-list">
             <li class="studio-features-item studio-features-item-1">
